# darkproto-proposal

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.benchmarks.sh  make.sh  run.benchmarks.sh  rust-toolchain
.aws/: CloudFormation4Cloud9.yaml  awscli.sh  cloud9.yaml  config  credentials  ebs-resize.sh
.cargo/: config.toml
.dl/: wget.sh
.docker/: build.benchmarks.sh  cipher_benchmarks.dockerfile  darkproto_app.bin.dockerfile  darkproto_app.dockerfile  docker.build.sh  docker.run.sh  enclave_base.dockerfile  run.benchmarks.sh
.nitro/: ebs-resize.sh  nitro.enclave.build.sh  nitro.enclave.run.sh  rustup.sh
.patches/: EC.p256.field.rs.patch  RSA.key.rs.patch
darkproto/: Cargo.toml
darkproto-enclave-streaming/: Cargo.toml  Dockerfile.client  Dockerfile.server  Makefile  README.md
darkproto-enclave-streaming/.config/: config.toml
darkproto-enclave-streaming/.dl/: download.list  wget.sh
darkproto-enclave-streaming/.vault/: pwgen.sh
darkproto-enclave-streaming/src/: cli.rs  cli_parser.rs  config.rs  lib.rs  main.rs  vsock.rs
darkproto/src/: cat.rs  cli.rs  main.rs
threshold-crypto/src/: lib.rs  poly.rs
