[package]
name = "darkproto-enclave-streaming"
version = "0.1.0"
authors = ["Darkblock <team@darkblock.io>"]
edition = "2021"
# rust-version = "stable"
description = "DarkBlock's DarkProto streaming app with execution of sensitive encryption/decryption/re-encryption part inside the Intel SGX enclave (based on AWS Nitro Enclaves)."
homepage = "https://github.com/darkblockio/darkproto-proposal"
repository = "https://github.com/darkblockio/darkproto-proposal"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
toml = "0.5"
clap = { version = "3.2", features = ["derive"] }
log = "0.4"
nix = "0.20"
byteorder = "1.3"

[dev-dependencies]

[build-dependencies]

[target]

[features]
